--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qG1BqqSutOCxPRwzCARjRgg/2OCPhYlaax8WQjD9Tlo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_USERNAME=ec6010250cf15e
+MAIL_PASSWORD=7a345731fcd000
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=raajaud@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AUTH0_DOMAIN=dev-sp4kjk0j.us.auth0.com
+AUTH0_CLIENT_ID=vsTUzh32uRT05Vdxb3oNcr1jp0zKuS0t
+AUTH0_CLIENT_SECRET=LtTywD1iMv5LVziORa6VD_wlaf4akLFyxE9HWWQSZZe-C2-dcWTfkW5KwVnzfGp4
