--- a/app.yaml
+++ b/app.yaml
@@ -1,38 +1,11 @@
-runtime: php  # language of the app
-env: flex     # let app engine know we use flexible environment
-runtime_config:
- document_root: public   #folder where index.php is
-# Ensure we skip ".env", which is only for local development
-skip_files:
- - .env #we want to skip this to make sure we don’t mess stuff up on the server
+runtime: php72
+
 env_variables:
- # Put production environment variables here.
- APP_ENV: local   # or production
- APP_DEBUG : true # or false 
- APP_KEY: base64:qG1BqqSutOCxPRwzCARjRgg/2OCPhYlaax8WQjD9Tlo= 
-#go to generate app key paragraf in this tutorial
- CACHE_DRIVER: database
-# instead of putting the cache in the database I recommend using redis
- SESSION_DRIVER: database #or file since both work
- APP_LOG: daily
- APP_TIMEZONE: UTC #your timezone of choice
-# follow the part of the tutorial on setting up your SQL database
- DB_CONNECTION: mysql
- DB_HOST: localhost
- DB_DATABASE: webapp
- DB_USERNAME: root
- DB_PASSWORD: 62776632@Webapp
- DB_SOCKET: /cloudsql/project-webapp-319006:asia-south1:webapp
- QUEUE_DRIVER: database #in case you execute queued jobs
- MAIL_DRIVER: smtp
- MAIL_HOST: smtp.mailtrap.io
- MAIL_PORT: 2525
- MAIL_USERNAME: ec6010250cf15e
- MAIL_PASSWORD: 7a345731fcd000
- LOG_DELETE:  true # this is a parameter added by us in the project .env file. You can add here any setting you would add to your .env file
- GOOGLE_VISION_PROJECT_ID : project_id
-#we need this for the flex environment
-beta_settings:project-webapp-319006:asia-south1:webapp
-   # for Cloud SQL, set this value to the Cloud SQL connection name,
-   # e.g. "project:region:cloudsql-instance"
-   cloud_sql_instances: project:cloudsql-instance
+   APP_KEY: base64:qG1BqqSutOCxPRwzCARjRgg/2OCPhYlaax8WQjD9Tlo=
+   APP_STORAGE: /tmp
+   CACHE_DRIVER: database
+   SESSION_DRIVER: database
+   DB_DATABASE: webappdb
+   DB_USERNAME: root
+   DB_PASSWORD: webapppw
+   DB_SOCKET: "/cloudsql/sharp-ring-319002:asia-south1:webappiid"
