--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Asif's WebApp
+APP_NAME="Asif's WebApp"
 APP_ENV=local
 APP_KEY=base64:9W/oCFTEYWggU+frooeU8meON1tCM3YmGOCKC2qyR5Q=
 APP_DEBUG=true
